Initializing Rproj file, plus minor tweaks.

--- a/index.qmd
+++ b/index.qmd
@@ -5,8 +5,8 @@ format:
     page-layout: full
 about:
   template: solana
-  image: assets/img/DSC08712.jpg
-  image-width: 30em
+  image: assets/img/DSC08712.JPG
+  image-width: 25em
   image-shape: round
 ---
 
@@ -28,7 +28,7 @@ about:
 Welcome! I'm a second-year PhD Candidate in Statistics at the University of Waterloo.
 I completed my BMath in 2022 and my MMath in Statistics in 2024, both also at the University of Waterloo.
 
-My research interests involve multistate modeling under complex observation schemes as well as two-phase designs for longitudinal covariate sampling.
+My research interests involve multistate modelling under complex observation schemes as well as two-phase designs for longitudinal covariate sampling.<br><br>
 
 [Department of Statistics and Actuarial Science](https://uwaterloo.ca/statistics-and-actuarial-science/)<br> 
 [University of Waterloo](https://uwaterloo.ca/)<br>
