Adding non-home pages, plus more tweaks to home page

--- a/_biblio/papers.bib
+++ b/_biblio/papers.bib
@@ -1,14 +1,14 @@
 @article{bumbulis-cook:2025,
-  AUTHOR = {Bumbulis, Laura S. and Cook, Richard J.},
-  TITLE = {Robustness and Efficiency Considerations When Testing Process Reliability with a Limit of Detection},
-  JOURNAL = {Mathematics},
-  VOLUME = {13},
-  YEAR = {2025},
-  NUMBER = {8},
-  ARTICLE-NUMBER = {1274},
-  URL = {https://www.mdpi.com/2227-7390/13/8/1274},
-  ISSN = {2227-7390},
-  DOI = {10.3390/math13081274}
+  author = {Bumbulis, Laura S. and Cook, Richard J.},
+  title = {Robustness and Efficiency Considerations When Testing Process Reliability with a Limit of Detection},
+  journal = {Mathematics},
+  volume = {13},
+  year = {2025},
+  number = {8},
+  article-number = {1274},
+  url = {https://www.mdpi.com/2227-7390/13/8/1274},
+  issn = {2227-7390},
+  doi = {10.3390/math13081274}
 }
 
 @article {colaco-et-al:2025,
@@ -21,7 +21,7 @@
 	doi = {10.3899/jrheum.2025-0314.TOUR2C},
 	publisher = {The Journal of Rheumatology},
   issn = {0315-162X},
-	URL = {https://www.jrheum.org/content/52/Suppl_2/27.3},
+	url = {https://www.jrheum.org/content/52/Suppl_2/27.3},
 	eprint = {https://www.jrheum.org/content/52/Suppl_2/27.3.full.pdf},
 	journal = {The Journal of Rheumatology}
 }
