--- a/index.qmd
+++ b/index.qmd
@@ -25,13 +25,14 @@ about:
 <i class="bi bi-envelope"></i></a> 
 </div>
 
-Welcome! I'm a second-year PhD Candidate in Statistics at the University of Waterloo.
+Welcome! I'm a second-year PhD Candidate in Statistics at the University of Waterloo, working under the supervision of [Professor Richard Cook](https://www.math.uwaterloo.ca/~rjcook/).
 I completed my BMath in 2022 and my MMath in Statistics in 2024, both also at the University of Waterloo.
 
-My research interests involve multistate modelling under complex observation schemes as well as two-phase designs for longitudinal covariate sampling.<br><br>
+My research interests involve multistate modelling under complex observation schemes as well as two-phase designs for failure time studies.<br><br>
 
 [Department of Statistics and Actuarial Science](https://uwaterloo.ca/statistics-and-actuarial-science/)<br> 
 [University of Waterloo](https://uwaterloo.ca/)<br>
 
+M3 4224<br>
 200 University Avenue West<br>
 Waterloo, ON, Canada N2L 3G1
